Login page refresh. This commit's purpose is to make login page easier to develop and refresh its style a bit. What was changed: - added a folder with mixins useful to use in other scss components - removed tables in login page - removed classes which were no longer in use - used scss functionalities and nested some styles (could remove more classes in html template) - added some elevation to buttons - removed scrollbar in this page

--- a/frontend/src/app/pages/login-page/login-page.component.scss
+++ b/frontend/src/app/pages/login-page/login-page.component.scss
@@ -1,18 +1,5 @@
-.decoration-side {
-    position: relative;
-    margin: -0.5em 0; // Workaround for top navigation bar shadow
-    float: left;
-    width: 100%;
-    height: 110%;
-    background: white url("../../../assets/img/login_pic.jpg");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-}
-
-body {
-    background: black;
-}
+@import "../../utils/mixins";
+@import '~@angular/material/theming';
 
 .mat-card-title {
     font-size: 1.5em;
@@ -26,45 +13,67 @@ body {
 }
 
 .login-side {
-    position: absolute;
-    margin: 0;
-    top: 25%;
-    right: 20%;
-    width: 20%;
-    min-width: 340px;
+    position: relative;
+    @include size(100%);
+    transition: all 1s;
 
-    .login-card {
-        position: relative;
-        height: 60%;
-        margin: 0 auto;
+    &:before {
+        @include absolute(top 0);
+        @include size(100%);
+        display: block;
+        background-size: cover;
+        background: white url("../../../assets/img/login_pic.jpg") no-repeat center;
+        content: " ";
+    }
+
+    mat-card {
+        @include absolute(top 20% right 20%);
+        min-height: 20%;
+        min-width: 20em;
+        margin: 0;
+        @include mat-elevation-transition;
+        @include mat-elevation(2);
+        &:hover {
+            @include mat-elevation(3);
+        }
     }
 }
 
-.login-button {
-    float: left;
+mat-card-content {
+    display: flex;
+    flex-direction: column;
+    form {
+        max-width: 80%;
+        display: flex;
+        flex-direction: column;
+        padding: 1em 0;
+    }
+    mat-card-actions {
+        padding: 0;
+        display: flex;
+        align-items: center;
+
+        :not(:last-child) {
+            margin-right: 0.5em;
+        }
+
+        .error {
+            color: red;
+        }
+    }
+
+    button {
+        &:not(:disabled) {
+            @include mat-elevation-transition;
+            @include mat-elevation(3);
+            &:hover {
+                @include mat-elevation(5);
+            }
+        }
+    }
 }
 
-.login-spinner {
-    left: 10px;
-    float: left;
-}
-
-.login-spinner-label {
-    margin-left: 15px;
-    line-height: 36px;
-}
-
-.incorrect-login-or-password {
-    color: red;
-    padding-left: 10px;
-    line-height: 36px;
-}
-
-.login-button-row {
-    padding-bottom: 15px;
-}
-
-.register-link-row {
+.register-link {
     padding-top: 15px;
     border-top: 1px solid #bbb;
 }
